// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExternalURLView accepts a complete Cadence expression 1`] = `
"pub fun resolveExternalURL(): MetadataViews.ExternalURL {
    return MetadataViews.ExternalURL(\\"http://foo.com/nfts/\\".concat(self.id))
}
"
`;

exports[`ExternalURLView accepts a raw template that uses all variables 1`] = `
"pub fun resolveExternalURL(): MetadataViews.ExternalURL {
    let collectionURL = Foo.collectionDisplay!.externalURL.url
    let nftOwner = self.owner!.address.toString()
    let nftID = self.id.toString()
    return MetadataViews.ExternalURL(collectionURL.concat(\\"/nfts/\\").concat(nftOwner).concat(\\"/\\").concat(nftID))
}
"
`;

exports[`ExternalURLView accepts a raw template that uses no variables 1`] = `
"pub fun resolveExternalURL(): MetadataViews.ExternalURL {
    return MetadataViews.ExternalURL(\\"https://foo.com\\")
}
"
`;

exports[`ExternalURLView accepts a raw template that uses the \${collection.url} variable 1`] = `
"pub fun resolveExternalURL(): MetadataViews.ExternalURL {
    let collectionURL = Foo.collectionDisplay!.externalURL.url
    return MetadataViews.ExternalURL(collectionURL.concat(\\"/nfts\\"))
}
"
`;

exports[`ExternalURLView accepts a raw template that uses the \${nft.id} variable 1`] = `
"pub fun resolveExternalURL(): MetadataViews.ExternalURL {
    let nftID = self.id.toString()
    return MetadataViews.ExternalURL(\\"http://foo.com/\\".concat(nftID))
}
"
`;

exports[`ExternalURLView accepts a raw template that uses the \${nft.owner} variable 1`] = `
"pub fun resolveExternalURL(): MetadataViews.ExternalURL {
    let nftOwner = self.owner!.address.toString()
    return MetadataViews.ExternalURL(\\"http://foo.com/\\".concat(nftOwner))
}
"
`;

exports[`NFTCollectionDisplayView generates a Cadence snippet with an HTTP media file 1`] = `
"pub fun resolveNFTCollectionDisplay(): MetadataViews.NFTCollectionDisplay {
    let media = MetadataViews.Media(
        file: MetadataViews.HTTPFile(url: \\"http://foo.com/nft.jpeg\\"),
        mediaType: \\"image/jpeg\\"
    )

    return MetadataViews.NFTCollectionDisplay(
        name: \\"Foo NFT Collection\\",
        description: \\"This is the Foo NFT collection.\\",
        externalURL: MetadataViews.ExternalURL(\\"http://foo.com\\"),
        squareImage: media,
        bannerImage: media,
        socials: {}
    )
}
"
`;

exports[`NFTCollectionDisplayView generates a Cadence snippet with an IPFS media file with a path 1`] = `
"pub fun resolveNFTCollectionDisplay(): MetadataViews.NFTCollectionDisplay {
    let media = MetadataViews.Media(
        file: MetadataViews.IPFSFile(
            cid: \\"bafkreicrfbblmaduqg2kmeqbymdifawex7rxqq2743mitmeia4zdybmmre\\", 
            path: \\"foo.jpeg\\"
        ),
        mediaType: \\"image/jpeg\\"
    )

    return MetadataViews.NFTCollectionDisplay(
        name: \\"Foo NFT Collection\\",
        description: \\"This is the Foo NFT collection.\\",
        externalURL: MetadataViews.ExternalURL(\\"http://foo.com\\"),
        squareImage: media,
        bannerImage: media,
        socials: {}
    )
}
"
`;

exports[`NFTCollectionDisplayView generates a Cadence snippet with an IPFS media file with no path 1`] = `
"pub fun resolveNFTCollectionDisplay(): MetadataViews.NFTCollectionDisplay {
    let media = MetadataViews.Media(
        file: MetadataViews.IPFSFile(
            cid: \\"bafkreicrfbblmaduqg2kmeqbymdifawex7rxqq2743mitmeia4zdybmmre\\", 
            path: nil
        ),
        mediaType: \\"image/jpeg\\"
    )

    return MetadataViews.NFTCollectionDisplay(
        name: \\"Foo NFT Collection\\",
        description: \\"This is the Foo NFT collection.\\",
        externalURL: MetadataViews.ExternalURL(\\"http://foo.com\\"),
        squareImage: media,
        bannerImage: media,
        socials: {}
    )
}
"
`;

exports[`RoyaltiesView generates a view with no royalties 1`] = `
"pub fun resolveRoyalties(): MetadataViews.Royalties {
    return MetadataViews.Royalties([])
}
"
`;

exports[`RoyaltiesView generates a view with one royalty 1`] = `
"pub fun resolveRoyalties(): MetadataViews.Royalties {
    return MetadataViews.Royalties([
        MetadataViews.Royalty(
            receiver: getAccount(0xf8d6e0586b0a20c7).getCapability<&{FungibleToken.Receiver}>(/public/flowTokenReceiver),
            cut: 0.1,
            description: \\"10% of sale proceeds go to the NFT creator in FLOW.\\"
        )
    ])
}
"
`;

exports[`RoyaltiesView generates a view with two royalties 1`] = `
"pub fun resolveRoyalties(): MetadataViews.Royalties {
    return MetadataViews.Royalties([
        MetadataViews.Royalty(
            receiver: getAccount(0xf8d6e0586b0a20c7).getCapability<&{FungibleToken.Receiver}>(/public/flowTokenReceiver),
            cut: 0.1,
            description: \\"10% of sale proceeds go to the NFT creator in FLOW.\\"
        ),
        MetadataViews.Royalty(
            receiver: getAccount(0xf8d6e0586b0a20c7).getCapability<&{FungibleToken.Receiver}>(/public/fusdReceiver),
            cut: 0.05,
            description: \\"5% of sale proceeds go to the NFT creator in FUSD.\\"
        )
    ])
}
"
`;

exports[`RoyaltiesView generates a view without a royalty description 1`] = `
"pub fun resolveRoyalties(): MetadataViews.Royalties {
    return MetadataViews.Royalties([
        MetadataViews.Royalty(
            receiver: getAccount(0xf8d6e0586b0a20c7).getCapability<&{FungibleToken.Receiver}>(/public/fusdReceiver),
            cut: 0.03,
            description: \\"\\"
        )
    ])
}
"
`;

exports[`SerialView generates a Cadence snippet 1`] = `
"pub fun resolveSerial(_ metadata: Metadata): MetadataViews.Serial {
    return MetadataViews.Serial(metadata.serialNumber)
}
"
`;
